--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 				<version>0.9.13</version>
 				<configuration>
 					<from>
-						<image>openjdk:alpine</image>
+						<image>registry.docker-cn.com/library/openjdk:alpine</image>
 					</from>
 					<to>
 						<image>registry.cn-hangzhou.aliyuncs.com/lefer/leferapi:1.3</image>
